--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
   "name": "elabftw/elabftw",
   "description": "Laboratory notebook for research labs",
   "homepage": "https://www.elabftw.net",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/MarcelBolten/iCal"
+    }
+  ],
   "require": {
     "php": ">=8.3.0",
     "ext-ctype": "*",
@@ -52,7 +58,8 @@
     "guzzlehttp/psr7": "^2.6",
     "psr/http-message": "^2.0",
     "psr/log": "^3.0",
-    "setasign/fpdi": "^2.6"
+    "setasign/fpdi": "^2.6",
+    "eluceo/ical": "dev-vtodo"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
