--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
     "3dmol": "^2.3.0",
+    "@ag-grid-community/client-side-row-model": "^32.3.2",
+    "@ag-grid-community/core": "^32.3.2",
+    "@ag-grid-community/infinite-row-model": "^32.3.2",
+    "@ag-grid-community/react": "^32.3.2",
+    "@ag-grid-community/styles": "^32.3.2",
     "@deltablot/chemdoodle-web-mini": "^9.5.1",
     "@deltablot/dropzone": "^7.1.5",
     "@deltablot/malle": "^2.6.1",
@@ -17,11 +22,14 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@tanstack/react-table": "^8.20.5",
     "@teselagen/bio-parsers": "^0.4.22",
     "@teselagen/ove": "^0.4.12",
     "@yarnpkg/core": "^4.1.3",
     "@yarnpkg/fslib": "^3.1.0",
     "@yarnpkg/libzip": "^3.1.0",
+    "ag-grid-community": "^32.3.2",
+    "ag-grid-react": "^32.3.2",
     "bootstrap": "^4.6.2",
     "bootstrap-markdown-fa5": "^2.10.2",
     "css-loader": "^6.11.0",
